# Regression-Analysis-2026

./: .gitignore  README.md
homework/: week05.md  week09.md  week10.md
homework/week11/: week11.md  week11_kaggle_guide.md
homework/week12/: week12.md
homework/week12/example/: README.md  main.py
slides/: README.md  ipynb_agent_spec.md  pyproject.toml
slides/template/: course_beamer_template.tex  layout.md  weekly_notebook_template.py
slides/week12/: week12_bias_variance.tex
slides/week12_new/: Untitled.md  week12_class.py
students/02_zy/: .gitignore
students/03_lvxiaoyu/: main.py  pyproject.toml
students/03_lvxiaoyu/docs/: week03_report.md
students/03_lxy/week04/: report.md
students/04_lyq/docs/: experiment_report.md
students/05_qyz/: main.py  pyproject.toml
students/06_zaq/: main.py  pyproject.toml
students/07_nc/: pyproject.toml
students/08_zmy/: main.py  pyproject.toml
students/09_sx/: pyproject.toml
students/09_sx/src/utils/: __init__.py  diagnostics.py  models.py
students/09_sx/src/week04/: main.py  solvers.py
students/09_sx/src/week07/: main.py
students/09_sx/src/week09/: data_prep.py  evaluate.py
students/10_xzn/: README.md  main.py  pyproject.toml
students/11_lww/: simulation.py
students/12_wxy/: main.py  pyproject.toml
students/13_qh/: .gitignore
students/13_qh/week06/src/: README.md  main.py  pyproject.toml
students/13_qh/week06/src/results/: real_world_report.md  summary_report.md  synthetic_report.md
students/13_qh/week07/src/: pyproject.toml
students/13_qh/week07/src/utils/: __init__.py
students/13_qh/week07/src/week07/: main.py
students/13_qh/week11/src/: pyproject.toml
students/13_qh/week11/src/utils/: __init__.py  diagnostics.py  metrics.py  models.py  transformers.py
students/13_qh/week11/src/week11/: __init__.py  main.py
students/14_lwj/: main.py  pyproject.toml
students/15_lxl/: pyproject.toml
students/18_mxt/: .gitignore
students/19_lvshenke/: week01.txt
students/20_zyf/: .gitignore
students/22_wjq/: .gitignore
students/23_zy/: pyproject.toml
students/template/: main.py  pyproject.toml
students/template/results/: real_world_report.md  synthetic_report.md
students/template/src/week04_solvers/: data_generator.py  main.py  solvers.py
students/template/src/week05_covariance/: analysis.py  data_generator.py  main.py  simulation.py
students/template/src/week06-demo/: main.py  models.py  test_models.py
students/template/src/week06-hw/: main.py  models.py  test_models.py
students/template/src/week09/: generate_dirty_data.py
(+162 files in other folders)
