[project]
name = "week07-optimization-engine"
version = "0.1.0"
description = "Week 7: The Optimization Engine & The Generalization Quest"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]
