[project]
name = "week11-dual-inference"
version = "0.1.0"
description = "Week 11: Dual Inference Sprint — Synthetic-to-Real Regression Workflow"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
